--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Calculater</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="sRJlEOcLdd1R1AmnL8RTKAhVJ74aWcl3-hAYlQm6rO8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
