--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             display: none;
         }
     </style>
-    <title>Calculater</title>
+    <title>Calculator</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="google-site-verification" content="sRJlEOcLdd1R1AmnL8RTKAhVJ74aWcl3-hAYlQm6rO8" />
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark">
+<body class="bg-light">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
@@ -51,7 +51,7 @@
                     </div>
 
                     <!-- RESULTS -->
-                    <div id="results" class="pt-4">
+                    <div id="results" class="pt-6">
                         <h5>Results</h5>
                         <div class="form-group">
                             <div class="input-group">
@@ -66,7 +66,7 @@
                                 <input type="number" class="form-control" id="total-payment" disabled>
                             </div>
                         </div>
-
+    // improw code
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">Total Interest</span>
